--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "tars",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "UNLICENSED",
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "botkit": "^0.6.4",
-    "cheerio": "^1.0.0-rc.2",
-    "express": "^4.16.2",
-    "is-url": "^1.2.4",
-    "mongoose": "^4.12.4",
-    "superagent": "^3.8.3"
-  }
+    "name": "tars",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "author": "",
+    "license": "UNLICENSED",
+    "dependencies": {
+        "body-parser": "^1.18.2",
+        "botkit": "^0.6.4",
+        "cheerio": "^1.0.0-rc.2",
+        "express": "^4.16.2",
+        "is-url": "^1.2.4",
+        "mongoose": "^4.12.4",
+        "superagent": "^3.8.3"
+    }
 }
