--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
         "body-parser": "^1.18.2",
         "botkit": "^0.6.4",
         "cheerio": "^1.0.0-rc.2",
-        "express": "^4.16.2",
+        "express": "^4.16.3",
         "is-url": "^1.2.4",
         "mongoose": "^4.12.4",
+        "path": "^0.12.7",
         "superagent": "^3.8.3"
     }
 }
