--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "cheerio": "^1.0.0-rc.2",
         "express": "^4.16.3",
         "is-url": "^1.2.4",
+        "lodash": "^4.17.10",
         "moment": "^2.22.1",
         "mongoose": "^4.12.4",
         "path": "^0.12.7",
