--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "moment": "^2.22.1",
         "mongoose": "^4.12.4",
         "path": "^0.12.7",
-        "superagent": "^3.8.3"
+        "superagent": "^3.8.3",
+        "unescape": "^1.0.1"
     }
 }
