--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "botkit": "^0.6.4",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
+    "fast-levenshtein": "^2.0.6",
     "is-url": "^1.2.4",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
